# Uma-Bot

./: .gitignore  README.md  get_lines.py  main.py  playlist.txt  pyproject.toml  requirements.txt
database/: db.pkl  main.db  main.db-journal  races.json
src/: __init__.py  bot.py  data.py  debug.py  dev.py  disct.py  music.py  shell.py  skills.py  utils.py
src/career/: __init__.py  career.py  conditions.py  goals.py
src/careers/: career.py  conditions.py  goals.py  races.py
src/club/: __init__.py  club.py
src/data/: __init__.py  constants.py  items.py  models.py  race_datas.py  ranking.py  skill_database.py  support_database.py  uma_database.py
src/db/: db.py
src/profile/: __init__.py
src/race/: __init__.py  engine.py  models.py  race.py  rewards.py  uma.py  view.py
src/views/: __init__.py  career.py  club.py  feedback.py  gacha.py  home.py  lb.py  pages.py  race.py  request_item.py  skills.py  state.py  storage.py  translations.py
tests/: career.py
