[project]
name = "umabot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "py-cord",
    "pynacl",
    "rapidfuzz",
    "requests",
    "sqlitedict",
    "uicord",
    "yt-dlp",
    "pillow"
]

[tool.uv.sources]
uicord = { git = "https://github.com/H1387Lmao/UICord.git" }
