[project]
name = "umabot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "py-cord",
    "requests",
    "sqlitedict",
    "uicord>=3.1.0",
    "pillow",
]

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord.git" }
uicord = { path = "../UICord" }

[dependency-groups]
dev = [
    "uicord",
]
