[project]
name = "umabot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "py-cord",
    "requests",
    "sqlitedict",
    "uicord>=3.1.0",
    "pillow",
    "textual<0.86.0",
    "textual-terminal>=0.3.0",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord.git" }
uicord = { path = "../UICord" }

[dependency-groups]
dev = [
    "uicord",
]
